--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,9 +1,15 @@
 #root {
   max-width: 1280px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr; /* Makes each column equal width */
+  grid-template-rows: 1fr;
+  gap: 20px;            /* Adds spacing between the boxes */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+
 
 .logo {
   height: 6em;
@@ -47,6 +53,13 @@ body {
   margin: 0;
   font-family: "Helvetica Neue", Arial, sans-serif;
   background-color: #f5f5f5;
+}
+
+body {
+  background-image: url("https://wallpapers.com/images/featured/nature-2ygv7ssy2k0lxlzu.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Main container using CSS Grid */
@@ -202,6 +215,8 @@ body {
   background-color: #c82333;
 }
 
+
+
 /* Container for the WishletDetail component */
 .wishlet-detail-container {
   display: flex;
@@ -356,4 +371,6 @@ body {
 .wishlet-form-container button[type="submit"]:hover {
   background-color: #0056b3;
 }
+
+
 
